@@ -35,6 +35,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15238: shutil.copystat now copies Linux "extended attributes".
+
 - Issue #15230: runpy.run_path now correctly sets __package__ as described
   in the documentation
 
